--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-select": "^5.7.0",
-    "react-simple-star-rating": "^5.1.7"
+    "react-simple-star-rating": "^5.1.7",
+    "stremx": "file:"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
